--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
   <title>Rock Paper Scissors</title>
 </head>
 <body>
+  <button id="rock">Rock</button>
+  <button id="paper">Paper</button>
+  <button id="scissors">Scissors</button>
+
+
+
   <script src="javascript.js"></script>
+
 </body>
 </html>
